--- a/GoDonate.API/GoDonate/appsettings.json
+++ b/GoDonate.API/GoDonate/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "baza": "Server=localhost;Database=goDonateBaza;TrustServerCertificate=True;Trusted_Connection=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
