--- a/GoDonate.API/GoDonate/appsettings.json
+++ b/GoDonate.API/GoDonate/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "baza": "Server=localhost;Database=goDonateBaza;TrustServerCertificate=True;Trusted_Connection=True"
+    "baza": "Server=localhost;Database=goDonateBaza1;TrustServerCertificate=True;Trusted_Connection=True"
   },
   "Logging": {
     "LogLevel": {
